# ParticipantaToDo

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/maxi/autel/com/ndkstudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/JavaJni/: TestJniInterface.java
app/src/main/java/maxi/autel/com/ndkstudy/: MainActivity.java
app/src/main/jni/: Android.mk  JavaJni_TestJniInterface.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/maxi/autel/com/ndkstudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
gradleplugin/: build.gradle
gradleplugin/src/main/groovy/com/aute/test/: TestPlugin.groovy
